# Speech-Emotion-Recognition

./: README.md  pyproject.toml
src/ser_librosa/: __init__.py  config.py  data.py  features.py  infer.py  model.py  train.py
test/: test_features.py  test_model_training.py
